Changes in .env

--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 PORT=8000
-MONGO_DB_URI=mongodb+srv://nithin20891a05e5:S5fmO1fnkHAQjKMH@cluster0.vmfqqph.mongodb.net/messenger?retryWrites=true&w=majority&appName=Cluster0
+MONGO_DB_URI=mongodb+srv://nithin20891a05e5:S5fmO1fnkHAQjKMH@cluster0.vmfqqph.mongodb.net/messenger?retryWrites=true&w=majority
 JWT_KEY=nithin
 NODE_ENV=development
